[FT-6742] Add store and plugin, but need to define how to store actions

--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     },
     "scripts": {
         "heroku-postbuild": "sh tools/heroku.sh build"
+    },
+    "dependencies": {
+        "undo-redo-vuex": "^1.4.0",
+        "vuex": "^3.6.2"
     }
 }
